--- a/registration.html
+++ b/registration.html
@@ -106,6 +106,9 @@
 
                 <input type="checkbox">
                 <label for="course4">C++</label>
+
+                <input type="checkbox">
+                <label for="course5">DevOps</label>
             </div>
 
             <div class="actions">
